--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,39 @@
-<div class="header mt-4">
-  <h1>Cotação do Dólar - {{cotacaoAtual}}</h1>
-</div>
+<div>
+    <div class="flex flex-row w-full bg-gradient-to-r from-green-300 to-green-800">
+        <span class="text-8xl text-white p-2">$</span>
+        <span class="text-white text-5xl w-full p-2 mt-4">Cotação Dólar</span>
 
-<div class="buscarPorPeriodo">
-  Histórico de cotações
-  <label class="mr-3" for="dataInicial">Data inicial:</label>
-  <input id="dataInicial" type="date" name="dataInicial" #dataInicial>
-  <label class="mr-3" for="dataFinal">Data final:</label>
-  <input id="dataFinal" type="date" name="dataFinal" #dataFinal>
-  <button mat-raised-button color="primary" type="submit" class="btnPesquisar" (click)="getCotacaoPorPeriodo(dataInicial.value, dataFinal.value)" > Pesquisar </button>
-</div>
+        <div class="flex flex-row w-full justify-center pt-8 pb-8">
+            <div class="border-2 p-2 flex flex-row flex-grow-0 items-center mr-2">
+                <span class="text-lg text-green-100">Compra:</span>
+                <span class="pl-2 text-3xl font-medium text-white">{{'$ ' + (cotacaoAtual.preco_compra ?
+                    cotacaoAtual.preco_compra : "00.00" )}}</span>
+            </div>
 
-<div class="mt-3">
-  <ul *ngFor="let item of cotacaoPorPeriodoLista">
-    <li class="listaHistoricoCotacoesItem">
-      <span class="historicoDeCotacoesItemInfo"> {{item.data}}-{{item.hora}}  </span>
-      <span class="historicoDeCotacoesItemInfo"> {{item.preco}} </span>
-    </li>
-  </ul>
+            <div class="border-2 p-2 flex flex-row flex-grow-0 items-center">
+                <span class="text-lg text-red-200">Venda:</span>
+                <span class="pl-2 text-3xl font-medium text-white">{{'$ ' + (cotacaoAtual.preco_venda ? cotacaoAtual.preco_venda : "00.00" )}}</span>
+            </div>
+        </div>
+     </div>
+     <span class="min-h-1px bg-gray-500 w-full block "></span>
+
+    <div class="buscarPorPeriodo">
+        Histórico de cotações
+        <label class="mr-3" for="dataInicial">Data inicial:</label>
+        <input id="dataInicial" type="date" name="dataInicial" #dataInicial>
+        <label class="mr-3" for="dataFinal">Data final:</label>
+        <input id="dataFinal" type="date" name="dataFinal" #dataFinal>
+        <button mat-raised-button color="primary" type="submit" class="btnPesquisar"
+            (click)="getCotacaoPorPeriodo(dataInicial.value, dataFinal.value)"> Pesquisar </button>
+    </div>
+
+    <div class="mt-3">
+        <ul *ngFor="let item of cotacaoPorPeriodoLista">
+            <li class="listaHistoricoCotacoesItem">
+                <span class="historicoDeCotacoesItemInfo"> {{item.data}}-{{item.hora}} </span>
+                <span class="historicoDeCotacoesItemInfo"> {{item.preco_compra}} </span>
+            </li>
+        </ul>
+    </div>
 </div>
