--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,19 +22,32 @@
     <mat-drawer-container class="min-h-sideNav">
         <mat-drawer mode="side" class="min-w-350px" opened>
             <div class="flex flex-col p-4 items-center">
-                <span class="text-lg">Cotações por Período</span>
-                <label class="mr-3" for="dataInicial">Data inicial:</label>
-                <input id="dataInicial" type="date" name="dataInicial" #dataInicial>
-                <label class="mr-3" for="dataFinal">Data final:</label>
-                <input id="dataFinal" type="date" name="dataFinal" #dataFinal>
-                <button mat-raised-button color="primary" type="submit" class="btnPesquisar"
-                    (click)="getCotacaoPorPeriodo(dataInicial.value, dataFinal.value)"> Pesquisar </button>
+                <span class="text-2xl pb-4 pt-10 font-sans font-semibold">Cotações por Período</span>
+                
+                <form [formGroup]="periodoForm" (ngSubmit)="getCotacaoPorPeriodo()" class="flex flex-col">
+                <mat-form-field appearance="fill">
+                    <mat-label>Data Inicial</mat-label>
+                    <input matInput [min]="minDate" [max]="maxDateInicio" [matDatepicker]="picker_dialog1" formControlName="inicioPeriodo">
+                    <mat-datepicker-toggle matSuffix [for]="picker_dialog1"></mat-datepicker-toggle>
+                    <mat-datepicker #picker_dialog1></mat-datepicker>
+                </mat-form-field>
+
+
+                <mat-form-field appearance="fill">
+                    <mat-label>Data Final</mat-label>
+                    <input matInput [min]="minDate" [max]="maxDateFinal" [matDatepicker]="picker_dialog2" formControlName="finalPeriodo">
+                    <mat-datepicker-toggle matSuffix [for]="picker_dialog2"></mat-datepicker-toggle>
+                    <mat-datepicker #picker_dialog2></mat-datepicker>
+                </mat-form-field>
+
+                <button [disabled]="!periodoForm.valid" mat-raised-button color="primary" type="submit" class="btnPesquisar"> Pesquisar </button>
+            </form>
+                
             </div>
 
 
         </mat-drawer>
         <mat-drawer-content>
-
             <div class="mt-3">
                 <ul *ngFor="let item of cotacaoPorPeriodoLista">
                     <li class="listaHistoricoCotacoesItem">
