--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,44 +23,87 @@
         <mat-drawer mode="side" class="min-w-350px" opened>
             <div class="flex flex-col p-4 items-center">
                 <span class="text-2xl pb-4 pt-10 font-sans font-semibold">Cotações por Período</span>
-                
+
                 <form [formGroup]="periodoForm" (ngSubmit)="getCotacaoPorPeriodo()" class="flex flex-col">
-                <mat-form-field appearance="fill">
-                    <mat-label>Data Inicial</mat-label>
-                    <input matInput [min]="minDate" [max]="maxDateInicio" [matDatepicker]="picker_dialog1" formControlName="inicioPeriodo">
-                    <mat-datepicker-toggle matSuffix [for]="picker_dialog1"></mat-datepicker-toggle>
-                    <mat-datepicker #picker_dialog1></mat-datepicker>
-                </mat-form-field>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Data Inicial</mat-label>
+                        <input matInput [min]="minDate" [max]="maxDateInicio" [matDatepicker]="picker_dialog1"
+                            formControlName="inicioPeriodo">
+                        <mat-datepicker-toggle matSuffix [for]="picker_dialog1"></mat-datepicker-toggle>
+                        <mat-datepicker #picker_dialog1></mat-datepicker>
+                    </mat-form-field>
 
 
-                <mat-form-field appearance="fill">
-                    <mat-label>Data Final</mat-label>
-                    <input matInput [min]="minDate" [max]="maxDateFinal" [matDatepicker]="picker_dialog2" formControlName="finalPeriodo">
-                    <mat-datepicker-toggle matSuffix [for]="picker_dialog2"></mat-datepicker-toggle>
-                    <mat-datepicker #picker_dialog2></mat-datepicker>
-                </mat-form-field>
+                    <mat-form-field appearance="fill">
+                        <mat-label>Data Final</mat-label>
+                        <input matInput [min]="minDate" [max]="maxDateFinal" [matDatepicker]="picker_dialog2"
+                            formControlName="finalPeriodo">
+                        <mat-datepicker-toggle matSuffix [for]="picker_dialog2"></mat-datepicker-toggle>
+                        <mat-datepicker #picker_dialog2></mat-datepicker>
+                    </mat-form-field>
 
-                <button [disabled]="!periodoForm.valid" mat-raised-button color="primary" type="submit" class="btnPesquisar"> Pesquisar </button>
-            </form>
-                
+                    <button [disabled]="!periodoForm.valid" mat-raised-button color="primary" type="submit"
+                        class="btnPesquisar"> Pesquisar </button>
+                </form>
+
             </div>
 
 
         </mat-drawer>
         <mat-drawer-content>
-            <div class="mt-3">
-                <ul *ngFor="let item of cotacaoPorPeriodoLista">
-                    <li class="listaHistoricoCotacoesItem">
-                        <span class="historicoDeCotacoesItemInfo"> {{item.data}}-{{item.hora}} </span>
-                        <span class="historicoDeCotacoesItemInfo"> {{item.preco_compra}} </span>
-                    </li>
-                </ul>
+
+            <div class="pt-4 pl-4 pr-4">
+                <mat-form-field appearance="standard" class="w-full">
+                    <mat-label>Filtro</mat-label>
+                    <input matInput (keyup)="applyFilter($event)" placeholder="Exemplo 12/12/2012" #input>
+                </mat-form-field>
+
+                <div class="mat-elevation-z8">
+                    <table mat-table [dataSource]="dataSource" class="w-full" matSort>
+                        <ng-container matColumnDef="data">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Data </th>
+                            <td mat-cell *matCellDef="let row"> {{row.data}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="hora">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Hora </th>
+                            <td mat-cell *matCellDef="let row"> {{row.hora}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="preco_compra">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Preço Compra </th>
+                            <td mat-cell *matCellDef="let row">$ {{row.preco_compra}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="preco_venda">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Preço Venda </th>
+                            <td mat-cell *matCellDef="let row">$ {{row.preco_venda}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="diferenca_compra">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Diferença Compra </th>
+                            <td mat-cell *matCellDef="let row">$
+                                {{getDiferencaAbsoluta(row?.preco_compra,cotacaoAtual?.preco_compra)}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="diferenca_venda">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Diferença Venda </th>
+                            <td mat-cell *matCellDef="let row">$
+                                {{getDiferencaAbsoluta(row?.preco_venda,cotacaoAtual?.preco_venda)}} </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+                        <tr class="mat-row" *matNoDataRow>
+                            <td class="mat-cell" colspan="4">Nenhum dado corresponde para este filtro: "{{input.value}}"</td>
+                        </tr>
+                    </table>
+
+                    <mat-paginator [pageSizeOptions]="[10, 25, 100]" showFirstLastButtons aria-label="Select page of users"></mat-paginator>
+                </div>
+
             </div>
         </mat-drawer-content>
     </mat-drawer-container>
-
-
-
-
-
 </div>
