--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,12 @@
                 <span class="pl-2 text-3xl font-medium text-white">{{'$ ' + (cotacaoAtual.preco_venda ?
                     cotacaoAtual.preco_venda : "00.00" )}}</span>
             </div>
+
+            <div class="border-2 p-2 flex flex-row flex-grow-0 items-center ml-2">
+                <span class="text-lg text-blue-400">Maior Valor Período:</span>
+                <span class="pl-2 text-3xl font-medium text-white">{{'$ ' + (maiorCotacao.preco_venda ?
+                    maiorCotacao.preco_venda : "00.00" )}}</span>
+            </div>
         </div>
     </div>
     <span class="min-h-1px bg-gray-500 w-full block "></span>
@@ -24,7 +30,7 @@
             <div class="flex flex-col p-4 items-center">
                 <span class="text-2xl pb-4 pt-10 font-sans font-semibold">Cotações por Período</span>
 
-                <form [formGroup]="periodoForm" (ngSubmit)="getCotacaoPorPeriodo()" class="flex flex-col">
+                <form [formGroup]="periodoForm" (ngSubmit)="getCotacaoPorPeriodo() " class="flex flex-col">
                     <mat-form-field appearance="fill">
                         <mat-label>Data Inicial</mat-label>
                         <input matInput [min]="minDate" [max]="maxDateInicio" [matDatepicker]="picker_dialog1"
@@ -74,12 +80,12 @@
 
                         <ng-container matColumnDef="preco_compra">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Preço Compra </th>
-                            <td mat-cell *matCellDef="let row">$ {{row.preco_compra}} </td>
+                            <td mat-cell *matCellDef="let row" [ngClass]="row.preco_compra < cotacaoAtual.preco_compra ? 'text-red-500' : 'text-green-500' " >$ {{row.preco_compra}} </td>
                         </ng-container>
 
                         <ng-container matColumnDef="preco_venda">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Preço Venda </th>
-                            <td mat-cell *matCellDef="let row">$ {{row.preco_venda}} </td>
+                            <td mat-cell *matCellDef="let row" [ngClass]="row.preco_compra < cotacaoAtual.preco_compra ? 'text-red-500' : 'text-green-500' ">$ {{row.preco_venda}} </td>
                         </ng-container>
 
                         <ng-container matColumnDef="diferenca_compra">
